# lsg-web

./: .travis.yml  MANIFEST.IN  requirements.txt  setup.cfg  setup.py
lsg_web/: __init__.py  auth.py  bug.py  category.py  changelog.py  food.py  homepage.py  meal.py  menu.py  person.py  schema.sql  tray.py  useful.py  user.py  version.py
lsg_web/static/img/: logowhite
lsg_web/static/js/: ready.js  ready.min.js
lsg_web/static/js/plugin/bootstrap-tagsinput/: bootstrap-tagsinput.min.js
lsg_web/templates/: base.html  flashed_messages.html  index.html
lsg_web/templates/auth/: login.html
lsg_web/templates/bug/: create.html  list.html
lsg_web/templates/category/: create.html  list.html  update.html
lsg_web/templates/changelog/: changelog.html
lsg_web/templates/food/: create.html  list.html  update.html
lsg_web/templates/meal/: create.html  info.html  list.html  update.html
lsg_web/templates/menu/: add.html  create.html  info.html  list.html  update.html  update_composed.html
lsg_web/templates/person/: create.html  info.html  list.html  update.html
lsg_web/templates/tray/: create.html  list.html  update.html
lsg_web/templates/user/: create.html  list.html  update.html
lsg_web/templates/version/: create.html  list.html
tests/: conftest.py  data.sql  test_auth.py  test_bug.py  test_category.py  test_changelog.py  test_db.py  test_factory.py  test_food.py  test_homepage.py  test_meal.py  test_menu.py  test_person.py  test_tray.py  test_user.py  test_version.py
