[metadata]
name = lsg_web
version = 0.0.3
url = http://lsg-web.gembloux.uliege.be/auth/login
license = BSD-3-Clause
maintainer = Maxime Franco
maintainer_email = franco.maxime@gmail.com
description = The basic blog app built in the Flask tutorial.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires = ['Flask', 'paho-mqtt']

[options.extras_require]
test = pytest; coverage

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    lsg_web